// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 1'] = `
Object {
  "ignorePatterns": [
    "projects/**/*",
  ],
  "overrides": [
    {
      "extends": [
        "plugin:@angular-eslint/ng-cli-compat",
        "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "createDefaultProgram": true,
        "project": [
          "tsconfig.json",
          "e2e/tsconfig.json",
        ],
      },
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    {
      "extends": [
        "plugin:@angular-eslint/template/recommended",
      ],
      "files": [
        "*.html",
      ],
      "rules": {},
    },
  ],
  "root": true,
}
`;

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 2'] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "lintFilePatterns": [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 3'] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "createDefaultProgram": true,
        "project": [
          "projects/another-app/tsconfig.app.json",
          "projects/another-app/tsconfig.spec.json",
          "projects/another-app/e2e/tsconfig.json",
        ],
      },
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "customprefix",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "customprefix",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    {
      "files": [
        "*.html",
      ],
      "rules": {},
    },
  ],
}
`;

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 4'] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "lintFilePatterns": [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 5'] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "createDefaultProgram": true,
        "project": [
          "projects/another-lib/tsconfig.lib.json",
          "projects/another-lib/tsconfig.spec.json",
        ],
      },
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "lib",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "lib",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    {
      "files": [
        "*.html",
      ],
      "rules": {},
    },
  ],
}
`;

exports['v1123-multi-project-yarn-auto-convert it should pass linting after converting the out of the box Angular CLI setup (with an additional project called "another-app" with a custom prefix set) 6'] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": {
   
